Update SWF Sandbox (0.3)

--- a/poc/swf-sandbox/index.html
+++ b/poc/swf-sandbox/index.html
@@ -22,6 +22,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.svg" />
+    <script src="broadcast-channel-single-tab-polyfill.js"></script>
   </head>
   <body>
     <!-- gtm:body -->
